page products finished

--- a/frontend-antilles/public/index.html
+++ b/frontend-antilles/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="selling vintage items for less" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Antilles | Home</title>
+  <title>Antilles</title>
 </head>
 
 <body>
